--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    /* background: linear-gradient(90deg, #F7F9FC 100%, #c4c7e9 100%); */
+    background-color: #f0f1f7;
+}
+
+img {
+    width: 100%;
 }
 
 a {
@@ -16,6 +22,26 @@ a {
 .container {
     display: block;
     width: 100%;
+}
+
+ul {
+    list-style: none;
+}
+
+header {
+    z-index: 2;
+    background-color: #fff;
+    position: fixed;
+    width: 100%;
+}
+
+nav {
+    position: relative;
+    z-index: 1;
+    margin-top: 4%;
+    height: 100%;
+    box-shadow: 6px 2px 6px 0px #dddddd;
+    background-color: #fff;
 }
 
 .right-row {
@@ -159,19 +185,19 @@ input::placeholder {
 
 .logo {
     display: inline-block;
-    width: 18%;
+    width: 14%;
 }
 
 .logo hr {
     display: block;
-    margin-top: 2%;
+    margin-top: 4%;
     margin-left: 6%;
-    width: 60%;
+    width: 80%;
     opacity: 12%;
 }
 
 .logo-wrapper {
-    width: 50%;
+    width: 24%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 8%;
@@ -215,29 +241,201 @@ input::placeholder {
 
 .small-profile-img-wrap {
     display: inline-block;
-    width: 64px;
-    height: 64px;
+    width: 42px;
+    height: 42px;
     border-radius: 64px;
-    margin-top: 4%;
+    margin-top: 6%;
     overflow: hidden;
-}
-
-.small-profile img {
-    width: 100%;
 }
 
 .small-profile h3 {
     display: inline-block;
     position: relative;
-    top: -42px;
+    top: -26px;
     margin-left: 2%;
 }
 
 .small-profile p {
     display: block;
     position: relative;
-    top: -32px;
-    margin-left: 20%;
+    top: -22px;
+    margin-left: 14%;
+}
+
+.left-side-menu {
+    position: fixed;
+    width: 16%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.change-company {
+    background-color: #eeeff7;
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 62%;
+    height: 54px;
+    margin-left: 6%;
+    margin-top: 6%;
+    border-radius: 12px;
+    vertical-align: middle;
+}
+
+.change-img-wrapper {
+    position: absolute;
+    top: 10%;
+    width: 38px;
+    height: 38px;
+    margin-left: 10%;
+    border-radius: 32px;
+    overflow: hidden;
+}
+
+.change-company h3 {
+    display: inline-block;
+    width: 60%;
+    margin-left: 36%;
+    margin-top: 4%;
+    font-size: 16px;
+}
+
+.change-arrows {
+    float: right;
+    position: relative;
+    margin-top: 10%;
+    margin-right: 22%;
+}
+
+.change-arrows button {
+    opacity: 100%;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.dropdown {
+    background-color: #fff;
+    width: 70%;
+    display: none;
+    margin-left: 6%;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+}
+
+.drop-company {
+    width: 80%;
+    cursor: pointer;
+}
+
+.drop-company:hover {
+    border: 1px solid #2B3FFF;
+}
+
+.dropdown-wrapper {
+    width: 100%;
+    padding: 4%;
+    padding-bottom: 8%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.left-side-menu hr {
+    display: block;
+    margin-top: 6%;
+    margin-left: 6%;
+    width: 70%;
+    opacity: 12%;
+}
+
+.menu-point {
+    display: flex;
+    margin-top: 8%;
+    align-items: center;
+    height: 100%;
+    width: 74%;
+    /* border-left: 2px solid #2B3FFF; */
+    cursor: pointer;
+}
+
+.menu-point a {
+    margin-left: 6%;
+    font-weight: 500;
+}
+
+.menu-img-wrapper {
+    width: 12%;
+    margin-left: 6%;
+    display: inline-block;
+}
+
+.left-menu {
+    margin-left: 6%;
+}
+
+.feed-area {
+    display: block;
+    float: right;
+    margin-top: 5%;
+    width: 84%;
+    height: 100%;
+}
+
+.feed-settings {
+    display: inline-block;
+    width: 56%;
+    margin-left: 8%;
+    margin-top: 2%;
+}
+
+.feed-settings h3 {
+    display: inline-block;
+    color: #A6A6A6;
+    padding-left: 6%
+}
+
+.feed-settings a {
+    font-size: 38px;
+    color: #2B3FFF;
+}
+
+.hr-1 {
+    display: block;
+    position: absolute;
+    width: 4%;
+    margin-left: 3%;
+    margin-top: 4px;
+    color: #2B3FFF;
+}
+
+.hr-2 {
+    display: none;
+    position: absolute;
+    width: 4%;
+    margin-left: 12%;
+    margin-top: 4px;
+    color: #2B3FFF;
+}
+
+.hr-3 {
+    display: none;
+    position: absolute;
+    width: 2%;
+    margin-left: 22%;
+    margin-top: 4px;
+    color: #2B3FFF;
+}
+
+.feed-settings select {
+    float: right;
+    margin-top: 2%;
+    padding: 8px;
+    border: none;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 4px 0px rgb(197, 197, 197);
 }
 
 @media screen and (max-width: 375px) {
