--- a/style.css
+++ b/style.css
@@ -360,6 +360,10 @@ input::placeholder {
     cursor: pointer;
 }
 
+.menu-point a:hover {
+    color: #2B3FFF;
+}
+
 .menu-point a {
     margin-left: 6%;
     font-weight: 500;
@@ -375,6 +379,17 @@ input::placeholder {
     margin-left: 6%;
 }
 
+.hide-ninja {
+    position: fixed;
+    z-index: 2;
+    width: 50%;
+    margin-top: -6px;
+    padding: 0;
+    background-color: #f0f1f7;
+    height: 80px;
+    margin-left: 8%;
+}
+
 .feed-area {
     display: block;
     float: right;
@@ -384,10 +399,13 @@ input::placeholder {
 }
 
 .feed-settings {
+    position: fixed;
+    z-index: 3;
     display: inline-block;
-    width: 56%;
+    width: 50%;
     margin-left: 8%;
-    margin-top: 2%;
+    margin-top: 1%;
+    background: #f0f1f7;
 }
 
 .feed-settings h3 {
@@ -404,8 +422,8 @@ input::placeholder {
 .hr-1 {
     display: block;
     position: absolute;
-    width: 4%;
-    margin-left: 3%;
+    width: 6%;
+    margin-left: 6%;
     margin-top: 4px;
     color: #2B3FFF;
 }
@@ -436,6 +454,180 @@ input::placeholder {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0px 0px 4px 0px rgb(197, 197, 197);
+}
+
+.swiper {
+    width: 600px;
+    height: 300px;
+    margin-left: 32%;
+}
+
+.feed-post {
+    position: relative;
+    width: 50%;
+    margin-top: 6%;
+    margin-left: 14%;
+    background-color: #fff;
+    border-radius: 24px;
+}
+
+.post-head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.post-head h3 {
+    display: inline-block;
+    margin-left: 2%;
+}
+
+.post-head a:hover {
+    color: #2B3FFF;
+}
+
+.post-head-wrapper {
+    padding: 8px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.post-icon-wrapper {
+    width: 48px;
+    height: 48px;
+    margin-left: 4%;
+    display: inline-block;
+    overflow: hidden;
+    border-radius: 24px;
+}
+
+.post-head button {
+    margin-left: 68%;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.post-dropdown {
+    background-color: #fff;
+    width: 24%;
+    display: none;
+    position: absolute;
+    z-index: 2;
+    padding-bottom: 1%;
+    margin-top: -1%;
+    margin-left: 72%;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+}
+
+.post-dropdown._active {
+    display: block;
+}
+
+.post-set hr {
+    display: flex;
+    justify-content: center;
+    opacity: 20%;
+    width: 78%;
+    margin-left: 8%;
+}
+
+.post-set p {
+    display: flex;
+    align-items: center;
+    padding-left: 8%;
+    margin-top: 6%;
+}
+
+.post-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 360px;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.post-text {
+    padding: 4%;
+}
+
+.post-text p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 146%;
+    margin-top: 2%;
+}
+
+.date {
+    display: block;
+    margin-top: 12px;
+    opacity: 30%;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.post-views {
+    display: flex;
+    align-items: center;
+    margin-top: 2%;
+}
+
+.views-count {
+    margin-left: 2%;
+    width: 30%;
+}
+
+.views-count p {
+    font-size: 16px;
+    color: #A6A6A6;
+}
+
+.views-count span {
+    font-size: 22px;
+    font-weight: 600;
+    color: #000;
+}
+
+.post-likes {
+    margin-left: 22%;
+}
+
+.post-comments {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    margin-top: 4%;
+    width: 100%;
+}
+
+.post-comments button {
+    display: inline-block;
+    width: 18%;
+    height: 34px;
+    margin-left: 2%;
+    border: none;
+    background-color: #2B3FFF;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.post-comments img {
+    width: 12%;
+}
+
+.post-comments input {
+    width: 76%;
+    height: 28px;
+    padding: 4px 0px 4px 16px;
+    border: none;
+    border-radius: 12px;
+    background-color: #e6e6e6;
 }
 
 @media screen and (max-width: 375px) {
