--- a/style.css
+++ b/style.css
@@ -85,9 +85,9 @@ nav {
     font-weight: 600;
 }
 
-#map {
+.map {
     display: none;
-    width: 1142px;
+    width: 1280px;
     height: 980px;
 }
 
@@ -131,6 +131,17 @@ nav {
 }
 
 .form-wrap input {
+    margin-top: 4%;
+    width: 70%;
+    height: 62px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    background-color: #EFEFF0;
+}
+
+.form-wrap textarea {
     margin-top: 4%;
     width: 70%;
     height: 62px;
@@ -296,8 +307,7 @@ input::placeholder {
 .change-company h3 {
     display: inline-block;
     width: 60%;
-    margin-left: 36%;
-    margin-top: 4%;
+    margin-left: 32%;
     font-size: 16px;
 }
 
@@ -317,7 +327,7 @@ input::placeholder {
 
 .dropdown {
     background-color: #fff;
-    width: 70%;
+    width: 60%;
     display: none;
     margin-left: 6%;
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.2);
@@ -338,8 +348,6 @@ input::placeholder {
     padding: 4%;
     padding-bottom: 8%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .left-side-menu hr {
@@ -731,6 +739,7 @@ input::placeholder {
     font-size: 18px;
     line-height: 140%;
     opacity: 50%;
+    margin-top: 2%;
 }
 
 .company-info hr {
@@ -767,6 +776,47 @@ input::placeholder {
     color: rgb(204, 53, 53);
     font-weight: 600;
     font-size: 18px;
+}
+
+.switch-btn {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: #eeeff7;
+    border-radius: 12px;
+}
+
+table {
+    width: 90%;
+    margin-left: 4%;
+    margin-top: 4%;
+    font-size: 18px;
+    border-radius: 16px;
+    overflow: hidden;
+    margin-bottom: 16%;
+}
+
+thead {
+    background-color: #ccd1ff;
+}
+
+td {
+    padding: 1%;
+}
+
+.cabinet-header form {
+    position: absolute;
+    top: 120px;
+    right: 20px;
+}
+
+.map-page {
+    position: absolute;
+    display: block;
+    width: 1800px;
+    height: 1000px;
+    margin-left: 16%;
+    margin-top: 4%;
 }
 
 @media screen and (max-width: 375px) {
