--- a/style.css
+++ b/style.css
@@ -132,6 +132,13 @@ nav {
     margin-top: 4%;
 }
 
+.err-msg {
+    width: 48%;
+    font-size: 14px;
+    color: rgb(202, 98, 98);
+    padding-top: 4%;
+}
+
 .form-wrap input {
     margin-top: 4%;
     width: 66%;
@@ -144,6 +151,7 @@ nav {
     background-color: transparent;
     padding-left: 4%;
     border-bottom: 1px solid #2B3FFF;
+    font-family: 'Montserrat', sans-serif;
 }
 
 input:focus {
@@ -166,6 +174,17 @@ input::-moz-focus-inner {
     border: none;
     border-radius: 8px;
     background-color: #EFEFF0;
+}
+
+#head-file {
+    border-bottom: none;
+}
+
+.ch-lb-header {
+    position: absolute;
+    top: 840px;
+    left: 152px;
+    font-weight: 500;
 }
 
 .form-wrap a {
@@ -259,12 +278,13 @@ input::-moz-focus-inner {
 }
 
 .small-profile-img-wrap {
-    display: inline-block;
+    display: inline-flex;
     width: 42px;
     height: 42px;
     border-radius: 64px;
     margin-top: 6%;
     overflow: hidden;
+    justify-content: center;
 }
 
 .small-profile h3 {
@@ -304,6 +324,8 @@ input::-moz-focus-inner {
 
 .change-img-wrapper {
     position: absolute;
+    display: flex;
+    justify-content: center;
     top: 10%;
     width: 38px;
     height: 38px;
@@ -976,6 +998,12 @@ td {
     padding: 1%;
 }
 
+.tabpost-title {
+    width: 60%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .cabinet-header form {
     position: absolute;
     top: 120px;
@@ -1045,6 +1073,150 @@ td {
 .hide-btn button:hover {
     opacity: 100%;
     color: #2B3FFF;
+}
+
+#chart-wrapper {
+    width: 44%;
+}
+
+#pop-wrapperChart {
+    position: absolute;
+    display: none;
+    background-color: #fff;
+    width: 70%;
+    height: 520px;
+    top: 120px;
+    margin-left: 8%;
+}
+
+.chart {
+    padding: 6%;
+    display: inline-flex;
+}
+
+.close2 {
+    float: right;
+    width: 4%;
+}
+
+.close2 button {
+    width: 60%;
+    margin-left: 12%;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    opacity: 30%;
+}
+
+
+/* ----SETTINGS---- */
+
+.settings {
+    display: block;
+    float: right;
+    margin-top: 4%;
+    width: 84%;
+    height: 100%;
+    padding-bottom: 8%;
+}
+
+.settings-head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    padding-top: 4%;
+    padding-left: 2%;
+}
+
+.settings-head h1 {
+    display: inline-block;
+}
+
+.settings-head hr {
+    display: inline-block;
+    width: 16%;
+    border-color: #2B3FFF;
+    margin-left: 4%;
+    margin-top: 1%;
+}
+
+.form-wrapper2 {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 720px;
+    background-color: #fff;
+    margin-left: 4%;
+    margin-top: 2%;
+    border-radius: 24px;
+}
+
+.settings-form {
+    margin-top: 4%;
+    width: 80%;
+}
+
+.settings-form textarea {
+    display: flex;
+    width: 36%;
+    height: 64px;
+    padding-left: 2%;
+    margin-top: 2%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    border: 1.5px solid #2B3FFF;
+}
+
+.set-icon {
+    float: right;
+}
+
+.com-desc {
+    position: absolute;
+    margin-left: 34%;
+    top: 320px;
+}
+
+.settings-form input {
+    display: flex;
+    width: 36%;
+    height: 36px;
+    padding-left: 2%;
+    margin-top: 6%;
+    font-family: 'Montserrat', sans-serif;
+    border-top: none;
+    border-bottom: 1.5px solid #2B3FFF;
+    border-right: none;
+    border-left: none;
+}
+
+.settings-form input:focus {
+    border-top: none;
+    background-color: #fff;
+}
+
+.but {
+    display: flex;
+    justify-content: center;
+    margin-top: 8%;
+}
+
+.settings-form button {
+    width: 20%;
+    height: 38px;
+    background-color: #2B3FFF;
+    border: none;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.settings-form button:hover {
+    box-shadow: 3px 2px 6px 0px #9da7fc;
+    background-color: #7784FF;
 }
 
 @media screen and (max-width: 375px) {
